lang.java.statics.test/tests/positive/interfaces/interface-with-extends.yes.javtest
STATIX ok
JAVAC  ok

[I]
interface J {
    public void m();
}

interface K {
    public void n();
}

interface I extends J, K {}
