lang.java.statics.test/tests/negative/interfaces/circular.no.javtest
STATIX fail java\.interfaces\.no-extends-cycle
JAVAC  fail cyclic inheritance involving I

[I]
public interface I extends J {}

[J]
public interface J extends I {}

